--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<name>Launcher</name>
-	<groupId>ru.fourgotten.VoxileLauncher</groupId>
-	<artifactId>Launcher</artifactId>
-	<version>2.20.0</version>
+	<name>ru.methuselah.launcher</name>
+	<groupId>ru.methuselah</groupId>
+	<artifactId>launcher</artifactId>
+	<version>0.15a</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -37,17 +37,22 @@
 		<dependency>
 			<groupId>ru.methuselah</groupId>
 			<artifactId>authlib</artifactId>
-			<version>0.14a</version>
+			<version>0.15a</version>
 		</dependency>
 		<dependency>
-			<groupId>ru.fourgotten</groupId>
-			<artifactId>VoxileSecurity</artifactId>
-			<version>0.14a</version>
+			<groupId>ru.methuselah</groupId>
+			<artifactId>securitylibrary</artifactId>
+			<version>0.15a</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evilco.mc</groupId>
 			<artifactId>nbt</artifactId>
 			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ru.simsonic</groupId>
+			<artifactId>rscUtilityLibrary</artifactId>
+			<version>2.0.5</version>
 		</dependency>
 	</dependencies>
 	
@@ -74,7 +79,7 @@
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
 						<manifest>
-							<mainClass>${project.groupId}.${project.artifactId}</mainClass>
+							<mainClass>${project.groupId}.${project.artifactId}.Launcher</mainClass>
 						</manifest>
 					</archive>
 					<excludes>
@@ -100,8 +105,8 @@
 					<assembly>
 						<inclusions>
 							<inclusion>
-								<groupId>ru.fourgotten</groupId>
-								<artifactId>VoxileSecurity</artifactId>
+								<groupId>ru.methuselah</groupId>
+								<artifactId>securitylibrary</artifactId>
 								<library>false</library>
 							</inclusion>
 						</inclusions>
@@ -122,9 +127,9 @@
 						<option>-repackageclasses</option>
 						<option>-keepattributes Signature</option>
 						<option>-dontnote com.google.**</option>
-						<option>-keepclassmembers public class ru.fourgotten.VoxileSecurity.Data.** { *; }</option>
-						<option>-dontnote ru.fourgotten.VoxileSecurity.Data.**</option>
-						<option>-keep public class ${project.groupId}.${project.artifactId} { public static void main(java.lang.String[]); }</option>
+						<option>-keepclassmembers public class ru.methuselah.launcher.Data.** { *; }</option>
+						<option>-dontnote ru.methuselah.launcher.Data.**</option>
+						<option>-keep public class ${project.groupId}.${project.artifactId}.* { public static void main(java.lang.String[]); }</option>
 					</options>
 					<injar>${project.build.finalName}.jar</injar>
 					<outjar>${project.build.finalName}.jar</outjar>
@@ -158,13 +163,13 @@
 							<minimizeJar>true</minimizeJar>
 							<artifactSet>
 								<includes>
+									<include>ru.methuselah:authlib</include>
 									<include>com.google.code.gson:gson</include>
 									<include>com.evilco.mc:nbt</include>
-									<include>ru.methuselah:authlib</include>
-									<include>commons-io:commons-io</include>
 									<include>com.google.guava:guava</include>
 									<include>com.google.code.findbugs:jsr305</include>
 									<include>org.mockito:mockito-all</include>
+									<include>commons-io:commons-io</include>
 								</includes>
 							</artifactSet>
 							<relocations>
@@ -210,14 +215,14 @@
 							</jre>
 							<versionInfo>
 								<originalFilename>Launcher.exe</originalFilename>
-								<fileVersion>2.20.0.0</fileVersion>
+								<productName>${project.artifactId}</productName>
+								<fileVersion>3.0.0.0</fileVersion>
+								<productVersion>3.0.0.0</productVersion>
 								<txtFileVersion>${project.version}</txtFileVersion>
-								<fileDescription>Launcher</fileDescription>
-								<copyright>© VoxileRu</copyright>
-								<productName>Launcher</productName>
-								<productVersion>2.20.0.0</productVersion>
+								<fileDescription>${project.name}</fileDescription>
 								<txtProductVersion>${project.version}</txtProductVersion>
 								<internalName>${project.name}</internalName>
+								<copyright>© voxile.ru, methuselah.ru</copyright>
 							</versionInfo>
 						</configuration>
 					</execution>
