--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,8 @@
 		</dependency>
 		<dependency>
 			<groupId>ru.simsonic</groupId>
-			<artifactId>rscUtilityLibrary</artifactId>
-			<version>2.0.5</version>
+			<artifactId>rscCommonsLibrary</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 	</dependencies>
 	
@@ -176,7 +176,7 @@
 									<include>com.google.code.findbugs:jsr305</include>
 									<include>org.mockito:mockito-all</include>
 									<include>commons-io:commons-io</include>
-									<include>ru.simsonic:rscUtilityLibrary</include>
+									<include>ru.simsonic:rscCommonsLibrary</include>
 								</includes>
 							</artifactSet>
 							<relocations>
