--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<repositories>
 		<repository>
 			<id>methuselah-repo</id>
-			<url>http://maven.methuselah.ru/</url>
+			<url>https://maven.methuselah.ru/</url>
 		</repository>
 		<repository>
 			<id>evil-co</id>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.6.2</version>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>ru.methuselah</groupId>
@@ -48,27 +48,27 @@
 		<dependency>
 			<groupId>com.evilco.mc</groupId>
 			<artifactId>nbt</artifactId>
-			<version>1.0.2</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>ru.simsonic</groupId>
 			<artifactId>rscCommonsLibrary</artifactId>
-			<version>2.2.0</version>
+			<version>2.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.1.7</version>
+			<version>1.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.1.7</version>
+			<version>1.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.21</version>
+			<version>1.7.22</version>
 		</dependency>
 	</dependencies>
 	
@@ -78,7 +78,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.6.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -90,7 +90,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.0.2</version>
 				<configuration>
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
@@ -107,7 +107,7 @@
 			<plugin>
 				<groupId>com.github.wvengen</groupId>
 				<artifactId>proguard-maven-plugin</artifactId>
-				<version>2.0.11</version>
+				<version>2.0.13</version>
 				<executions>
 					<execution>
 						<id>obfuscating</id>
@@ -118,7 +118,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<proguardVersion>5.2.1</proguardVersion>
+					<proguardVersion>5.3.2</proguardVersion>
 					<assembly>
 						<inclusions>
 							<inclusion>
@@ -160,7 +160,7 @@
 					<dependency>
 						<groupId>net.sf.proguard</groupId>
 						<artifactId>proguard-base</artifactId>
-						<version>5.2.1</version>
+						<version>5.3.2</version>
 						<scope>runtime</scope>
 					</dependency>
 				</dependencies>
@@ -211,7 +211,7 @@
 			<plugin>
 				<groupId>com.akathist.maven.plugins.launch4j</groupId>
 				<artifactId>launch4j-maven-plugin</artifactId>
-				<version>1.7.10</version>
+				<version>1.7.15</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
